# remove-background

./: .gitignore  README.md  pyproject.toml
rmbg/: cli.py
